--- a/src/index.html
+++ b/src/index.html
@@ -31,14 +31,10 @@
 </head>
 <body>
 
-    <!-- <button class="button">Button</button>
-    <button class="button button_gray">Button</button>
-    <button class="button button_white">Button</button> -->
-
     <header class="header">
         <div class="container">
             <div class="header__block">
-                <img class="header__img" src="icons/shared/logo.svg" alt="logo">
+                <a href="index.html"><img class="header__img" src="icons/shared/logo.svg" alt="logo"></a>
             </div>
         </div>
     </header>
